# music_predictor_streamlit/service/ModelTrainer.py
@@ -8,7 +8,7 @@ import traceback
 from loguru import logger
 from sklearn.metrics import confusion_matrix
 
-from music_predictor_streamlit.dto.dto import (
+from music_predictor_backend.dto.MusicDTO import (
     DatasetNameRequest,
     DatasetNameResponse,
     FitRequest,
@@ -33,6 +33,7 @@ class ModelTrainer:
         self._get_labels_url = f"{self._backend_url}/api/v1/get_labels"
         self._get_datasets_names = f"{self._backend_url}/api/v1/get_datasets_names"
         self._save_model_name_url = f"{self._backend_url}/api/v1/save_model_name"
+        self._trained_models = {}
 
     @staticmethod
     def create_report_metrics(
@@ -118,17 +119,20 @@ class ModelTrainer:
             logger.info(f"True, pred: {res}")
             self.create_report_metrics(res.y_true, res.y_pred, labels)
             st.success("Модель создана!")
+
+            return res.model_id
         except Exception as e:
             logger.error(e)
             logger.error(traceback.format_exc())
 
-    def _set_model_name(self, title: str):
+    def _set_model_name(self, title: str, model_id: str):
         url = self._save_model_name_url
         logger.info(f"Save model {url}")
 
-        model_name = ModelNameRequest(name=title)
+        model_name = ModelNameRequest(name=title, id=model_id)
         res = send_post_request(url, model_name.model_dump())
         logger.info(f"{res}")
+        self._trained_models[title] = model_id
         st.success(f"Модель с именем {title} сохранена")
 
     def _create_model(self, name: str):
@@ -140,14 +144,14 @@ class ModelTrainer:
         learning_rate = st.number_input(
             "Learning rate", min_value=0.0001, max_value=0.99, value=0.01
         )
-        fir_request = FitRequest(epochs=epochs, learning_rate=learning_rate)
+        fit_request = FitRequest(epochs=epochs, learning_rate=learning_rate, dataset_name=name)
         title = st.text_input(
             "Введите название модели. Для сохранения", "Meine_Kleine_Modeleen"
         )
 
         if st.button("Создать модель"):
-            self._fit_on_backend(fir_request, name)
-            self._set_model_name(title)
+            model_id = self._fit_on_backend(fit_request, name)
+            self._set_model_name(title, model_id)
 
     def _get_dataset_name(self) -> str | None:
         logger.info("Get dataset name")
